# alpine-packages

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  adaptive-lighting.yaml  chip-sdk.yaml  claude-code.yaml  codex.yaml  detect-radio-module.yaml  ftp-paperless-bridge.yaml  gcompat-custom.yaml  ha-pysmaplus.yaml  home-assistant-container.yaml  home-assistant-watch.yaml  home-assistant.yaml  index.html  matter-server.yaml  microvm-init.yaml  mise.toml  occu-java.yaml  occu-webui.yaml  occu.yaml  openccu-container.yaml  openccu.yaml  otbr.yaml  pivccu-akms.yaml  pivccu-detect.yaml  pivccu-modules-akms.yaml  pivccu-modules-dkms.yaml  pivccu-modules-rpi.yaml  pivccu-modules-src.yaml  pivccu.yaml  podinfo-container.yaml  podman-container-common.yaml  presence-simulation.yaml  prusalink.yaml  pyproject.toml  python314.yaml  renovate.json  ssh-to-age.yaml  (+5 more)
.mise/: env.sh
chip-sdk/: fix-pigweed-proto-duplicate.patch
ftp-paperless-bridge/: ftp-paperless-bridge.initd
home-assistant/: home-assistant.confd  home-assistant.initd
home-assistant-container/: 99-home-assistant.rules  home-assistant-container.confd  home-assistant-container.initd  home-assistant-logrotate.hourly  home-assistant-rostore.initd  home-assistant.logrotate  setup-home-assistant-image.sh
home-assistant-watch/: home-assistant-watch  home-assistant-watch.confd  home-assistant-watch.initd
keys/: packages@elohmeier.rsa.pub
matter-server/: matter-commission  matter-server.confd  matter-server.initd  matter-thread-sync
microvm-init/: init
occu-webui/: InterfacesList.xml  rega.conf  (+1 more)
(+62 files in other folders)
